# saas-app-rust

./: Cargo.toml  README.md  main_old.rs
migrations/2026-01-29-142946-0000_mi_01/: up.sql
src/: controllers.rs  db.rs  main.rs  models.rs  repository.rs  routes.rs  schema.rs  types.rs  utilities.rs
src/controllers/auth/: auth_controllers.rs
src/controllers/users/: users_controllers.rs
src/db/: pg_db.rs
src/models/auth/: auth_models.rs
src/models/users/: users_models.rs
src/repository/users/: users_repository.rs
src/routes/auth/: auth_routes.rs
src/routes/users/: users_routes.rs
src/types/users/: users_controllers_types.rs
src/types/utilities/: token_utilities_types.rs
src/utilities/: token_utilities.rs
