[package]
name = "golbot-chatbot-saas-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.12.1"
async-trait = "0.1.89"
bcrypt = "0.18.0"
chrono = "0.4.43"
diesel = { version = "2.1", features = ["postgres", "uuid"] }
dotenvy = "0.15"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.20.0", features = ["v4", "serde"] }
